<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/popUpLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/activity_horizontal_margin"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textSize="25sp"
            android:textColor="@color/jet"
            android:layout_marginBottom="5dp"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_name"
                android:inputType="textShortMessage"
                android:textColor="@color/black"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/userName"
                android:hint="@string/password"
                android:inputType="textPassword"/>
        </android.support.design.widget.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/dialogLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_gravity="bottom|end"
                android:text="@string/login"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/dialogCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/cancel"
                android:textAllCaps="false"
                />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/errorView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:visibility="gone"
            android:orientation="vertical">

            <TextView
                android:id="@+id/dialogErrorText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/sign_in_error"
                android:textColor="#ff0000"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or"
                android:textColor="@color/colorPrimary"
                android:layout_gravity="center"/>

            <Button

                android:id="@+id/dialogForgetBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forget_password"
                android:textAllCaps="false"
                android:textColor="@color/jet"/>
        </LinearLayout>

         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/activity_horizontal_margin"
             android:gravity="center">

             <TextView
                 android:id="@+id/noAccount"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/no_account"
                 android:textSize="16sp"
                 android:layout_marginRight="5dp"
                 android:layout_marginEnd="5dp"/>
             <TextView
                 android:id="@+id/signUp"

                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/sign_up"
                 android:textColor="@color/colorPrimary"
                 android:textSize="16sp"
                 android:layout_toRightOf="@+id/noAccount"
                 android:layout_toEndOf="@+id/noAccount" />

         </RelativeLayout>


    </LinearLayout>
</layout>
