<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout
        android:orientation="vertical" xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.jasim.tour.activity.EventAddActivity">

        <include
            android:id="@+id/toolbar"
            layout="@layout/tool_bar" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/eventName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/event_name"
                android:inputType="textShortMessage" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/eventLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/event_location"
                android:inputType="textShortMessage" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/eventBudget"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/event_budget_tk"
                android:inputType="numberSigned" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/eventStartDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/event_start_date"
                android:inputType="date"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/eventEndDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/event_end_date"
                android:inputType="date"/>
        </android.support.design.widget.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/cancelBtn"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/cancel"
                android:textAllCaps="false"/>


            <Button
                android:id="@+id/submitBtn"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_new_event"
                android:textAllCaps="false"/>
        </RelativeLayout>
    </LinearLayout>
</layout>
