<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.example.jasim.tour.activity.PasswordRecoveryActivity">

        <include
            android:id="@+id/toolbar"
            layout="@layout/tool_bar" />

        <TextView
            android:padding="@dimen/activity_horizontal_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password_recovery"
            android:textColor="@color/jet"
            android:textSize="20sp"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin">

            <EditText
                android:id="@+id/userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_name"
                android:inputType="textShortMessage"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin">

            <EditText
                android:id="@+id/passwordRecovery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/recovery_hints"
                android:inputType="textShortMessage"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/recoveryBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/recover"
            android:onClick="recover"
            android:textAllCaps="false" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText android:layout_marginTop="15dp"
                    android:id="@+id/userPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/your_password"
                    android:gravity="center"
                    android:inputType="textNoSuggestions"
                    android:visibility="gone"/>
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>
</layout>
