<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context="com.example.jasim.tour.activity.EventsDetailsAddActivity">

            <include
                android:id="@+id/toolbar"
                layout="@layout/tool_bar" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/activity_description" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true">

                <EditText
                    android:id="@+id/used"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/used_amount"
                    android:inputType="number"/>
            </android.support.design.widget.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_centerInParent="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:text="@string/add_image_from"
                    android:textColor="@color/colorPrimaryDark" />


                <Button
                    android:id="@+id/cameraBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/camera"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/galleryBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:text="@string/gallery"
                    android:textAllCaps="false" />


            </RelativeLayout>

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                app:riv_corner_radius="15dip"
                app:riv_border_width="2dip"
                app:riv_border_color="#333333"
                app:riv_mutate_background="true"
                app:riv_oval="false"  />

            <com.example.jasim.tour.adapter.CustomGridView
                android:id="@+id/gridView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:columnWidth="150dp"
                android:gravity="center"
                android:numColumns="auto_fit"
                android:visibility="gone"
                android:stretchMode="columnWidth"/>

            <!--<GridView-->
            <!--android:id="@+id/gridView"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="0dp"-->
            <!--android:layout_weight="1"-->
            <!--android:columnWidth="150dp"-->
            <!--android:gravity="center"-->
            <!--android:numColumns="auto_fit"-->
            <!--android:visibility="gone" />-->

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/cancelBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:text="@string/cancel"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/submitBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:text="@string/add_activity"
                    android:textAllCaps="false" />
            </RelativeLayout>
        </LinearLayout>

    </ScrollView>

</layout>